# ai-pair-programmer

./: .gitignore  CHANGELOG.md  LICENSE.md  MAINIFEST.txt  README.md  main.py  requirements.txt  setup.cfg  setup.py
.secret/: example_settings.ini
aipairprogrammer/: ai_pair_programmer.py  ai_pair_programmer_settings.py  qt_custom_dialog.py  query_history.py
aipairprogrammer/test/: test_ai_pair_programmer.py  test_ai_pair_programmer_settings.py  test_query_history.py
docs/: USERGUIDE.md
