[metadata]
name = AIPairProgrammer
version = 0.0.1
author = Randall Morgan
author_email = rmorgan@sensornet.us
description = An AI Pair Programmer
long_description = file: ./docs/USERGUIDE.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = aipairprogrammer
packages = find:
python_requires = >=3.7+

[options.packages.find]
where = aipairprogrammer
